# GdNativeTemplate

./: .gitignore  .gitmodules  README.md
main_application/: icon.svg.import  project.godot
main_application/Resources/: RTESample.tres
main_application/Scenes/: main.gd  main.tscn
main_application/extensions/: CMakeLists.txt
